--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@nuxt/image": "1.9.0",
     "@nuxtjs/tailwindcss": "6.13.1",
+    "@vueuse/core": "^12.7.0",
+    "@vueuse/nuxt": "12.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-vue": "^8.5.2",
     "lucide-vue-next": "^0.475.0",
     "nuxt": "^3.15.4",
-    "reka-ui": "^2.0.0",
+    "reka-ui": "^2.0.2",
     "shadcn-nuxt": "1.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
