Change start script to run server from output directory

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "yarn preview"
+    "start": "node .output/server/index.mjs"
   },
   "dependencies": {
     "@nuxt/image": "1.9.0",
